# docker-registry-purger

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements-dev.txt  setup.cfg  setup.py
docker_registry_purger/: __init__.py  purger.py  registry.py  semver.py  strategies.py  timestamp.py  utils.py
examples/: whitelist.txt
src/docker_registry_purger/: __init__.py  __main__.py  purger.py  registry.py  strategies.py  timestamp.py
