[metadata]
name = docker-registry-purger
author = Polyconseil
author_email = opensource+docker-registry-purger@polyconseil.fr
url = http://github.com/polyconseil/docker-registry-purger
description = A simple docker registry cleaner
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
keywords = docker, docker-registry, cleaner
classifiers =
        Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.4
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3 :: Only
        Topic :: System :: Software Distribution
        Topic :: System :: Systems Administration
        Topic :: Utilities

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir=
    =src
setup_requires =
    setuptools >= 38.6.0
    wheel >= 0.31.0
    twine >= 1.11.0
install_requires =
    click
    daiquiri
    isodate
    natsort
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    docker-registry-purger = docker_registry_purger.__init__:main

[flake8]
max-line-length = 120
exclude = build,dist,venv
ignore =
    # We want to align parameters in multi-line function definitions on
    # full indentation stops instead of aligned with the opening brace
    # (i.e., indent(param) = indent(func) + 2), and closing brace on the
    # same column as the function name. Example:
    #
    #   def some_function(
    #           arg1,
    #           arg2,
    #   ):
    #       pass
    #
    E124, E128
max-complexity = 10

[zest.releaser]
create-wheel = yes

